hphp/hack/test/typecheck/reactive/rx_superglobals3.php
<?hh // partial

<<__Rx>>
function f($x) {
  $a = $_GET;
}
